<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edtWriteNote"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@color/bg_edt_write_note"
        android:gravity="start"
        android:hint="@string/hint_edt_write_note"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnChooseDaySuccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtWriteNote"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/bg_btn"
        android:text="@string/choose_day_success"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:cornerRadius="5dp"
        app:icon="@drawable/ic_baseline_calendar_today_24"
        app:iconTint="@color/pink"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnChooseDaySuccess"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:text="@string/btnCancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:cornerRadius="5dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/btnChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_btn_choose"
            android:text="@string/btnChoose"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:cornerRadius="5dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="invisible" />
</RelativeLayout>